[tool.poetry]
name = "prices-api"
version = "0.1.0"
description = ""
authors = ["Bjoern Boschman <bjoern.boschman@tvsquared.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "*"
PyJWT = {version = "*", extras = ["crypto"]}

[tool.poetry.dev-dependencies]
boto3 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
